required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- fix clipping of polygon shapes in line layers (#3059)

- RFC 51 implementation: XML Mapfiles Format (#2872)

- Fix output for valid WCS 1.1 XML (#3086)

- Avoid double free with postgresql joins. (#2936)

- Don't attempt to project layers given in pixel coordinates (layer->transform != MS_TRUE) (#3096)

- Modify loading imagery from GDAL to load all bands at once to avoid multiple
  passes through pixel interleaved data (mapdrawgdal.c).  This is just an
  optimization - there should be no change in results or features.

- Modern GDALs clear the config when destroying driver manager.  Skip this
  call to avoid TLS leakage on cleanup (mapgdal.c).

- Fixed msMSSQL2008LayerGetShape to retrieve proper wkb geometries (#3082)

- Fixed the shape index for the inline layers (#3074)

- Fixed MINDISTANCE not considering label size on lines (#3050)

- Labeling enhancements: ability to repeat labels along a line/multiline (#3030)

- Modified STYLEITEM code to use the new way of rendering thick lines (#3025)

- Fixed template processor to respect layer order. (#2619)

- Add MS_DEBUGLEVEL and MS_ERRORFILE commandline switches for mapserv.c. 

- Exposed msMapOffsetExtent, msMapScaleExtent and msMapSetCenter methods in PHP/Mapscript (#2460)

- Removed ZEND_DEBUG define in PHP/Mapscript (#2717)

- Fixed PHP/Mapscript to support PHP 5.3 (#3065, #3066)

- remove -O optimization flags to configure script if configured
  with --enable-debug

- Fixed performance bottleneck when computing a polygon center of gravity for
  label point computation. (#3053)

- make WFS numberOfFeatures match maxFeatures if passed (#2907)
