@@ -13,6 +13,7 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk):
 ----------------------------
+- add default values for CGI %key% substitutions (#3108)
 
 - fix clipping of polygon shapes in line layers (#3059)
 
